completed prog_exit#new

--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -19,7 +19,8 @@
 
 
         <tr>            
-        <th class="date-admit"><%= f.label(:TEPAdmitDate, "Admit Date") %></th>
+        <th class="date-admit">
+            <%= f.label(:TEPAdmitDate, "Admit Date") %></th>
 
             <td class="date-admit">
                 <%= f.text_field :TEPAdmitDate, 'data-behaviour' => 'datepicker' %>
