--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 
     <%= stylesheet_link_tag('application') %>
-    <%= javascript_include_tag :defaults %>
-    <%= javascript_include_tag(:application)%>
+    <%# javascript_include_tag :defaults %>
+
+    <%= javascript_include_tag params[:controller] %>
+    <%= javascript_include_tag 'application' %>
 	</head>
 	<body>
 <!-- NEW HEADER STARTS HERE -->
