--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -55,7 +55,7 @@
               </br><span class="small-btn-text">
               Files
                 <span class="badge">
-                  <%=student.student_files.size%>
+                  <%=student.student_files.active.size%>
                 </span>
               </span>
 
