--- a/app/views/student_files/_delete_confirm.html.erb
+++ b/app/views/student_files/_delete_confirm.html.erb
@@ -5,16 +5,17 @@
 
 <!-- Button to trigger modal -->
 
-  <button class="btn btn-danger glyphicon glyphicon-remove action-large" data-toggle="modal" data-backdrop="static" data-target= "#delete-file" title="Delete File">
+  <button class="btn btn-danger glyphicon glyphicon-remove action-large" data-toggle="modal" data-backdrop="static" data-target= <%="#delete-file"+doc.id.to_s %> title="Delete File">
   </button>
 
   <!-- Modal -->
-  <div class="modal fade" id="delete-file" tabindex="-1" role="dialog" aria-labelledby="delete-label" aria-hidden="true">
+  <div class="modal fade" id= <%="delete-file"+doc.id.to_s %>  tabindex="-1" role="dialog" aria-labelledby= <%="delete-label"+doc.id.to_s %>   aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h3 class="modal-title" id="delete-label"> 
+          <h3 class="modal-title" id= <%="delete-label"+doc.id.to_s%> 
+            > 
             Delete File </h3>
         </div>
         <div class="modal-body">
