--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,15 @@
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to("Advisees", students_path) %></li>
       <li class="active"><%= link_to("Praxis Registration", new_praxis_result_path) %></li>
-      <li class="active"><%= link_to("Admission to TEP", adm_tep_index_path) %></li>
-      <li class="active"><%= link_to("Admission to Student Teaching", adm_st_index_path) %></li>
-      <li class="active"><%= link_to("Program Exits", prog_exits_path) %></li>
+      <li class = "dropdown active">        
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Admissions/Exit <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to("Admission to TEP", adm_tep_index_path) %></li>
+          <li><%= link_to("Admission to Student Teaching", adm_st_index_path) %></li>
+          <li><%= link_to("Program Exits", prog_exits_path) %></li>
+        </ul>
+      </li>
+
       <li class="dropdown active">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
         <ul class="dropdown-menu">
