validation fix for prog_exits

--- a/app/views/prog_exits/new.html.erb
+++ b/app/views/prog_exits/new.html.erb
@@ -1,3 +1,5 @@
-
+<%= link_to prog_exits_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
 <%= render(partial: 'new_form') %>
 
