--- a/app/views/prog_exits/index.html.erb
+++ b/app/views/prog_exits/index.html.erb
@@ -89,11 +89,12 @@
           locals: {
             :record_id => exit.AltID,
             :popover_title => "Exit Details", 
+            :button_title => "Details"
             :content => exit.Details
           } )  %>
 
 
-        <%= link_to("Edit", edit_prog_exit_path(exit.AltID), :class => "action details btn btn-info action-small")%>
+        <%= link_to("Edit", edit_prog_exit_path(exit.AltID), :class => "action btn btn-info action-small")%>
       </td>
 <!-- Edit record -->
 
