--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -2,7 +2,7 @@
   <i class=" link-text"> Back</i>
 <% end %>
     
-    <%= form_for(:adm_tep, :url => adm_tep_path(@application.AltID), method: :patch ) do |f| %>
+    <%= form_for(:adm_tep, :url => adm_tep_path(@application.id), method: :patch ) do |f| %>
 
     <h2>Edit TEP Application for <%=[@first_name, @last_name].join(' ') + " (" + @term.PlainTerm + ")" %></h2>
     <%= error_messages_for(@application) %> 
