--- a/app/views/adm_tep/show.html.erb
+++ b/app/views/adm_tep/show.html.erb
@@ -7,8 +7,8 @@
 
   <table class="vertical-table" summary="adm_tep detail view">
   <caption> 
- 	<div class="header1"> <%=[@first_name, @last_name].join(', ') +': ' + @term.PlainTerm%> </div>
-	<div class="header2">Application to TEP Details</div>
+ 	<div class="header1"> <%= name_details(@student, file_as=true) %> </div>
+	<div class="header2">Application to TEP Details: <%=@term.PlainTerm %></div>
 
   </caption>
 
