--- a/app/views/adm_st/edit_st_paperwork.html.erb
+++ b/app/views/adm_st/edit_st_paperwork.html.erb
@@ -8,7 +8,7 @@
             		<div class="header2"> <%= name_details(@student, file_as=true)  %></div>
             	</caption>
 
-			<%= form_for(@app, :url => adm_st_update_st_paperwork_path(@app.AltID), method: :post ) do |f| %>
+			<%= form_for(@app, :url => adm_st_update_st_paperwork_path(@app.id), method: :post ) do |f| %>
               <tr>
                 <td> <%= f.label :background_check, "Background Check" %>   </td>
                 <td><%= f.check_box :background_check %></td>
