--- a/app/views/adm_st/edit.html.erb
+++ b/app/views/adm_st/edit.html.erb
@@ -2,14 +2,15 @@
   <i class=" link-text"> Back</i>
 <% end %>
     
-    <%= form_for(:adm_st, :url => adm_st_path(@application.id), method: :patch ) do |f| %>
+
 
     <%= error_messages_for(@application) %> 
-
+    <%= form_for(:adm_st, :url => adm_st_path(@application.id), method: :patch ) do |f| %>
     <table summary="adm_st form fields">
+        <caption>
         <div class="header1"> <%= "Edit Application to Student Teaching"  %> </div>
         <div class="header2"> <%= name_details(@student, file_as=true) %> </div>
-
+        </caption>
         <tr>
             <th><%= f.label(:STAdmitted, "Admission Decision", ) %></th>
 
