--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,12 +8,12 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- 
- *= require bootstrap-datepicker
- *= require_tree
+
+
+ *= require bootstrap-datepicker 
  *= require_self
  *= require nav_bar
- 
+ *= require_tree .
  
  
  /* Admin stylesheet       */
@@ -55,8 +55,6 @@ html { height: 100%; width: 100%; }
   color: black;
 
   }
-
-
 
 body { width: 100%; min-width: 980px; height: 100%; margin: 0; padding: 0; 
   font: 12pt Verdana,Lucida,Arial,Helvetica,sans-serif; color: #332318; background-color: #F9F9F9;  }
