added logout ability

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,13 @@
        
             logged_in_user@email.com
               
-            <a href="#" class="btn btn-default">
+            <%= link_to "/logout", :class => "btn btn-default" do %>
+              Log Out
+            <% end %>
+             
+<!--             <a href="#" class="btn btn-default">
           Log Out
-            </a>
+            </a> -->
     </p>  
 
   </div>
