set up auth flow

--- a/app/views/access/access_denied.html.erb
+++ b/app/views/access/access_denied.html.erb
@@ -1,3 +1,6 @@
 Access Denied
 </br>
-You do not have permission to access the EDS Dashboard. To request access please contact <%= link_to("Jacob Stoebel", "mailto:stoebelj@berea.edu") %>
+
+
+
+You do not have permission to access the requested resource. To request access please contact <%= link_to("Jacob Stoebel", "mailto:stoebelj@berea.edu") %>.
