--- a/app/views/access/index.html.erb
+++ b/app/views/access/index.html.erb
@@ -1,8 +1,6 @@
 <h1>Access#index</h1>
 <p>Find me in app/views/access/index.html.erb</p>
 
-User object <%= session[:user]  %><br>
-Role Name <%= session[:user].role_name  %><br>
-
-testing is? "admin" <%= session[:user].is? "admin"  %>
+User name <%= session[:user]  %><br>
+Role  <%= session[:role]  %><br>
 
